fix headline alignments

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -118,7 +118,7 @@ body {
 main {
     position: relative;
     padding-bottom: calc(var(--navbar-height) + 4rem);
-    padding-top: 2rem;
+    padding-top: 1rem;
     min-height: 62dvh;
     height: 100%;
     width: 100%;
