--- a/src/styles/Typo.scss
+++ b/src/styles/Typo.scss
@@ -92,6 +92,7 @@ h6 {
 .title-and-button {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     button {
         text-transform: capitalize;
